add docker-compose
